...
        TopAppBarDefaults.topAppBarColors().copy(containerColor = Color.Black)
    } else {
        TopAppBarDefaults.topAppBarColors()
    }

    TopAppBar(
        modifier = Modifier.testTag("topbar_catima"),
        title = { Text(text = title) },
        colors = appBarColors,
        navigationIcon = {
            if (onBackPressedDispatcher != null) {
                IconButton(onClick = { onBackPressedDispatcher.onBackPressed() }) {
                    Icon(
...
